--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -2,12 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aWe-w9-4Pc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record Sounds View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="RecordSoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -63,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="1198" y="395"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sounds View Controller-->
         <scene sceneID="P41-wW-mmP">
             <objects>
-                <viewController id="bOp-Mx-Bv7" sceneMemberID="viewController">
+                <viewController id="bOp-Mx-Bv7" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dw8-TC-7CS"/>
                         <viewControllerLayoutGuide type="bottom" id="C2F-84-arN"/>
@@ -74,7 +75,44 @@
                     <view key="view" contentMode="scaleToFill" id="Gln-Oy-tIY">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iej-fX-YJj">
+                                <rect key="frame" x="68" y="109" width="100" height="100"/>
+                                <state key="normal" image="slow">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="slowButtonTapped:" destination="bOp-Mx-Bv7" eventType="touchUpInside" id="tRa-z7-9NB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWq-IF-hcZ">
+                                <rect key="frame" x="432" y="109" width="100" height="100"/>
+                                <state key="normal" image="fast">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="fastButtonTapped:" destination="bOp-Mx-Bv7" eventType="touchUpInside" id="6wr-Bw-oy3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCc-HS-7Hv">
+                                <rect key="frame" x="268" y="530" width="50" height="50"/>
+                                <state key="normal" image="stop">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopButtonTapped:" destination="bOp-Mx-Bv7" eventType="touchUpInside" id="zxg-4E-5BO"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iej-fX-YJj" firstAttribute="top" secondItem="dw8-TC-7CS" secondAttribute="bottom" constant="45" id="2eP-zO-Qc2"/>
+                            <constraint firstItem="iej-fX-YJj" firstAttribute="leading" secondItem="Gln-Oy-tIY" secondAttribute="leadingMargin" constant="52" id="OkT-09-9w5"/>
+                            <constraint firstItem="WWq-IF-hcZ" firstAttribute="top" secondItem="dw8-TC-7CS" secondAttribute="bottom" constant="45" id="XLx-ki-J11"/>
+                            <constraint firstItem="C2F-84-arN" firstAttribute="top" secondItem="CCc-HS-7Hv" secondAttribute="bottom" constant="20" id="XYm-yU-ssg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WWq-IF-hcZ" secondAttribute="trailing" constant="52" id="cjO-mM-ov1"/>
+                            <constraint firstAttribute="centerX" secondItem="CCc-HS-7Hv" secondAttribute="centerX" constant="7" id="nnn-Xw-IAH"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u2j-pR-SRj" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -101,7 +139,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fast" width="100" height="100"/>
         <image name="microphone.png" width="100" height="100"/>
+        <image name="slow" width="100" height="100"/>
         <image name="stop" width="50" height="50"/>
     </resources>
 </document>
